--- a/oauthlib/src/main/res/values/strings.xml
+++ b/oauthlib/src/main/res/values/strings.xml
@@ -2,21 +2,18 @@
     <string name="app_name">Oauth helper</string>
     <string name="authTypeTokenScope">Доступ только для чтения</string>
     <string name="login">Вход</string>
-    <string name="name">имя</string>
-    <string name="pass">пароль</string>
-    <string name="send">отправить</string>
+    <string name="name">Имя</string>
+    <string name="pass">Пароль</string>
+    <string name="send">Отправить</string>
     <string name="_2fa">Введите код доступа</string>
     <string name="title_activity_login">Sign in</string>
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    
+    <string name="error_bad_creds">Ошибка входа. Неверное имя или пароль</string>
+    <string name="error_bad_code">Ошибка входа. Неверный пароль</string>
+    <string name="error_net">Ошибка сети. Невозможно установить соединение с сервером</string>
+    <string name="action_dismiss">Отмена</string>
+    
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="AccTitle">GitHub</string>
 </resources>
